syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.steatoda.muddywaters.plankton.proto";

package muddywaters.plankton;

message Payload {
  string text = 1;
  int32 number = 2;
}

service EatService {

  rpc EatOne(Payload) returns (Payload);

  rpc EatStream(stream Payload) returns (Payload);

}